# openocd-on-esp32

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  partitions_example.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
app/: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig.defaults
app/components/compat/: CMakeLists.txt  compat.c
app/components/jimtcl/: CMakeLists.txt
app/components/jimtcl/platform_include/: termios.h
app/components/jimtcl/platform_include/netinet/: tcp.h
app/components/openocd/: CMakeLists.txt
app/main/: CMakeLists.txt  main.c
components/compat/: compat.c
components/jimtcl/: CMakeLists.txt
components/platform_include/: CMakeLists.txt  netdb.h  termios.h
components/platform_include/netinet/: in.h  tcp.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  log.h  main.c  networking.c  networking.h  storage.c  storage.h  types.h  ui.c  ui.h  ui_events.c  ui_events.h  web_page.html  web_server.c  web_server.h
main/network/: manual_config.c  manual_config.h  network.c  network.h  network_adapter.c  network_adapter.h  network_mngr.c  network_mngr.h  provisioning.c  provisioning.h  web_server.c  web_server.h
main/ui/: ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
main/web/: website.html
tools/: gdbinit
